# Bubble_and_Bubble

./: CMakeLists.txt  abilitypushbomb.cpp  abilitypushbomb.h  aicontroller.cpp  aicontroller.h  block.h  bomb.cpp  bomb.h  bombphysics.cpp  bombphysics.h  exit.cpp  exit.h  fire.cpp  fire.h  hardwall.cpp  hardwall.h  health.cpp  health.h  hitable.cpp  image.qrc  instructions.cpp  instructions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  numplusprop.cpp  numplusprop.h  pause.cpp  pause.h  physics.cpp  physics.h  player.cpp  player.h  pushprop.cpp  pushprop.h  rangeplusprop.cpp  rangeplusprop.h  resultshow.cpp  resultshow.h  (+12 more)
framework/: gameobject.cpp  gameobject.h  gamescene.cpp  gamescene.h
